FIXED:Job Alert button alignment issue

--- a/blocks/src/style.scss
+++ b/blocks/src/style.scss
@@ -1084,4 +1084,9 @@ a.awsm-b-job-item .awsm-job-specification-item {
 	.awsm-job-2-col .awsm-jobs-alerts-on .awsm-b-filter-item-search {
 	  width: calc(100% - 66px);
 	}
+
+	.awsm-job-2-col .awsm-jobs-alerts-on .awsm-jobs-alerts-popup-trigger-btn .awsm-b-jobs-alerts-trigger-btn{
+		margin-left: 10px;
+		margin-right: 10px;
+	}
 }
